--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,14 +118,14 @@
       "application/json": {
        "Hint1": "Begin by understanding the purpose of the Rabin-Miller algorithm. It's a primality test, which means it helps determine if a number is prime or not. This algorithm is probabilistic, offering a high degree of accuracy.",
        "Hint2": "The Rabin-Miller algorithm relies on the concept of modular exponentiation and the property that for a prime number p, certain equations must hold true. A key part of the algorithm involves repeatedly checking these conditions for different bases (a's).",
-       "Hint3": "To implement the algorithm in Python, start by writing a function for modular exponentiation. This function calculates (base^exponent) % modulus efficiently. Then, implement the main part of the Rabin-Miller test, which involves decomposing the number to be tested (n-1) into 2^s * d and repeatedly checking if either (a^d) % n == 1 or (a^(2^r * d)) % n == n-1 for any r between 0 and s-1.",
-       "Hint4": "Here's a simplified version of the Rabin-Miller algorithm in Python:\n```Python\nimport random\n\ndef modular_exponentiation(base, exponent, modulus):\n    result = 1\n    base = base % modulus\n    while exponent > 0:\n        if exponent % 2 == 1:\n           result = (result * base) % modulus\n        exponent = exponent >> 1\n        base = (base * base) % modulus\n    return result\n\ndef rabin_miller(n, k):\n    if n == 2 or n == 3:\n        return True\n    if n <= 1 or n % 2 == 0:\n        return False\n    d = n - 1\n    s = 0\n    while d % 2 == 0:\n        d //= 2\n        s += 1\n    for _ in range(k):\n        a = random.randint(2, n - 2)\n        x = modular_exponentiation(a, d, n)\n        if x == 1 or x == n - 1:\n            continue\n        for _ in range(s - 1):\n            x = modular_exponentiation(x, 2, n)\n            if x == n - 1:\n                break\n        else:\n            return False\n    return True\n```\nThis code defines a basic implementation of the Rabin-Miller primality test. The `k` parameter determines the accuracy of the test. The higher the `k`, the more accurate the test."
+       "Hint3": "To implement the algorithm in Python, start by writing a function for modular exponentiation. This function calculates (base^exponent) % modulus efficiently. Then, implement the main part of the Rabin-Miller test, which involves decomposing the number to be tested (n-1) into a power of 2 times an odd number (2^r * d) and then checking if either (a^d) % n == 1 or (a^(2^i * d)) % n == n-1 for any i between 0 and r-1.",
+       "Hint4": "Here's a simplified version of the Rabin-Miller algorithm in Python. Note that for a comprehensive solution, you'd typically run the test multiple times with different 'a' values to reduce the probability of a false positive. ```Python\nimport random\n\ndef power(base, exponent, modulus):\n    result = 1\n    base = base % modulus\n    while exponent > 0:\n        if exponent % 2 == 1:\n            result = (result * base) % modulus\n        exponent = exponent >> 1\n        base = (base * base) % modulus\n    return result\n\ndef rabin_miller(n, k):\n    if n == 2 or n == 3:\n        return True\n    if n <= 1 or n % 2 == 0:\n        return False\n    d = n - 1\n    r = 0\n    while d % 2 == 0:\n        d //= 2\n        r += 1\n    for _ in range(k):\n        a = random.randint(2, n - 2)\n        x = power(a, d, n)\n        if x == 1 or x == n - 1:\n            continue\n        for _ in range(r - 1):\n            x = power(x, 2, n)\n            if x == n - 1:\n                break\n        else:\n            return False\n    return True\n```"
       },
       "text/plain": [
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
      "output_type": "stream",
      "text": [
       "0.4117549657821655\n",
-      "0.45251935720443726\n"
+      "0.4520299434661865\n"
      ]
     }
    ],
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,14 +349,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Begin by understanding the purpose of the Rabin-Miller algorithm. It's a primality test, which means it helps determine if a number is prime or not. This algorithm is probabilistic, offering a high degree of accuracy. The Rabin-Miller algorithm relies on the concept of modular exponentiation and the property that for a prime number p, certain equations must hold true. A key part of the algorithm involves repeatedly checking these conditions for different bases (a random number less than p).\n"
+      "Begin by understanding the purpose of the Rabin-Miller algorithm. It's a primality test, which means it helps determine if a number is prime or not. This algorithm is probabilistic, offering a high degree of accuracy. The Rabin-Miller algorithm relies on the concept of modular exponentiation and witnesses. A witness is a number that can demonstrate whether another number is composite. Key to implementing this algorithm is understanding how to perform modular exponentiation efficiently.\n"
      ]
     }
    ],
@@ -370,17 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Begin by understanding the concept of 'divide and conquer' in algorithm design. Merge sort is a classic example of this approach, where the problem is divided into smaller, more manageable sub-problems. The first step in implementing merge sort is to divide the list into two halves. This can be done by finding the midpoint of the list and then splitting the list into left and right sublists. After dividing the list, the next step is to recursively sort both the left and right sublists. This means applying the merge sort algorithm to each sublist until they are small enough to be considered sorted (typically when the sublist has only one element). Once the sublists are sorted, the next step is to merge them back together. This involves comparing the elements of the sublists and combining them in a sorted manner. This step is crucial for the 'conquer' part of the 'divide and conquer' strategy. Here's a basic implementation of merge sort in Python: ```Python\n",
+      "Begin by understanding the concept of 'divide and conquer' in algorithm design. Merge sort is a classic example of this approach, where the problem is divided into smaller, more manageable sub-problems. The first step in implementing merge sort is to divide the list into two halves until each sub-list contains a single element. This is done recursively. Once you have divided the list, the next step is to merge the sub-lists. This involves comparing the elements of the sub-lists and combining them in a sorted manner. Implement the merge function that takes two sorted sub-lists and merges them into a single sorted list. This function is crucial for the merging step of the algorithm. Combine the concepts from the previous hints into a full merge sort implementation. Start with a function that checks if the list is longer than one element, then splits it and calls itself recursively. Finally, use the merge function to combine the sorted sub-lists. Here's a simplified version of how the code might look:\n",
+      "```Python\n",
       "def merge_sort(arr):\n",
       "    if len(arr) > 1:\n",
-      "        mid = len(arr)//2\n",
+      "        mid = len(arr) // 2\n",
       "        L = arr[:mid]\n",
       "        R = arr[mid:]\n",
       "\n",
@@ -407,8 +408,7 @@
       "            arr[k] = R[j]\n",
       "            j += 1\n",
       "            k += 1\n",
-      "    return arr\n",
-      "``` This code first divides the list into sublists, recursively sorts these sublists, and then merges them back together in a sorted order. The key to understanding merge sort is grasping the recursive nature of the algorithm and the merge process.\n"
+      "```\n"
      ]
     }
    ],
